--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,14 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.jpa.properties.hibernate.auto_quote_keyword=true
 
 spring.data.web.pageable.page-parameter=page
 spring.data.web.pageable.size-parameter=size
 spring.data.web.sort.sort-parameter=sort
-spring.data.web.pageable.default-page-size=3
+spring.data.web.pageable.default-page-size=10
 spring.data.web.pageable.one-indexed-parameters=true
 
 logging.level.root=INFO
